fixed contact link to send emial

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
       <ul>
         <!-- <li><a href="#features">Features</a></li> -->
         <!-- <li><a href="#pricing">Pricing</a></li> -->
-        <li><a href="#contact">Contact</a></li>
+        <a href="mailto:info@emp24.com?subject=Contact%20from%20Website&body=Hi%20EMP24%20Team,">Contact</a>
         <li><a href="https://vue-basic-flame.vercel.app/" class="login-btn">Login</a></li>
       </ul>
     </nav>
     <div class="hero-content">
       <h1>Modern Extensions for Epicor Eclipse ERP</h1>
-      <p>Streamlined tools for distributors—shipping, sales feeds, and more.</p>
+      <h2>Streamlined tools for distributors—shipping, sales feeds, and more.</h2>
+      <h3 class="warning">emp54 is in it's MVP stage which means it is not for sale yet while some early adopters give it a spin. If you are interested then by all means please reach out and we will keep you informed of progress.</h3>
       <!-- <div class="cta-buttons">
         <a href="#contact" class="btn primary">Get Started</a>
         <a href="#features" class="btn secondary">View Features</a>
