--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <!-- <li><a href="#features">Features</a></li> -->
         <!-- <li><a href="#pricing">Pricing</a></li> -->
-        <a href="mailto:info@emp24.com?subject=Contact%20from%20Website&body=Hi%20EMP24%20Team,">Contact</a>
+        <li><a href="mailto:info@emp24.com?subject=Contact%20from%20Website&body=Hi%20EMP24%20Team,">Contact</a></li>
         <li><a href="https://vue-basic-flame.vercel.app/" class="login-btn">Login</a></li>
       </ul>
     </nav>
